--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -8,7 +8,7 @@
                 </svg>
                 <strong>O'flix</strong>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-button navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -20,13 +20,41 @@
                         <a class="nav-link" href="{{ path('tvshow_index') }}">Séries</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ path('character') }}">Personnages</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('category') }}">Catégories</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Ma liste</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav me-4 mb-md-0">
-                    <li class="nav-item">
-                        <a class="btn btn-danger" aria-current="page" href="login.html">Se connecter</a>
-                    </li>
+                    {% if app.user %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                {{ app.user.firstname }}
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li>
+                                    <a class="dropdown-item" href="#">Profil</a>
+                                </li>
+                                {% if is_granted('ROLE_ADMIN') %}
+                                    <li>
+                                        <a class="dropdown-item" href="{{ path('backoffice_home') }}">Backoffice</a>
+                                    </li>
+                                {% endif %}
+                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    <a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
+                                </li>
+                            </ul>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="connect-button btn btn-success" aria-current="page" href="{{ path('app_login') }}">Se connecter</a>
+                        </li>
+                    {% endif %}
                 </ul>
                 <form class="d-flex m" action="{{ path('search_index') }}">
                     <input name="search" class="form-control me-2" type="search" placeholder="Ex : The mandalorian" aria-label="Search">
