--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,14 +11,16 @@
         </title>
         {% block stylesheets %}
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-            <link rel="stylesheet" href="{{ asset('css/oflix.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         {% endblock %}
 
     </head>
     <body>
         {% include "partials/_nav.html.twig" %}
+        {% include "partials/_flash.html.twig" %}
 
-        {% block body %}{% endblock %}
+        {% block body %}
+        {% endblock %}
 
         {% include "partials/_footer.html.twig" %}
 
