--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,29 +11,32 @@
         <section class="py-5 text-center container">
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
-                    <h1 class="fw-light">Séries TV et bien plus en illimité.</h1>
+                    <h1 class="slogan fw-light">Séries TV et bien plus en illimité.</h1>
                     <p class="lead text-muted">Où que vous soyez. Annulez à tout moment.</p>
-                    <p>
-                        <a href="login.html" class="btn btn-danger my-2">Se connecter</a>
-                        <a href="#" class="btn btn-secondary my-2">Créer un compte</a>
-                    </p>
+                    {% if app.user %}
+                        <h2>Bienvenue {{app.user.firstname}} !</h2>
+                    {% else %}
+                        <p>
+                            <a href="{{ path('app_login') }}" class="btn btn-success my-2">Se connecter</a>
+                            <a href="#" class="btn btn-secondary my-2">Créer un compte</a>
+                        </p>
+                    {% endif %}
                 </div>
             </div>
         </section>
 
-        <div class="py-5 bg-light">
+        <div class="py-5 bg-dark">
             <div class="container">
 
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     {% for tvShow in latestTvShow %}
-                        <div class="col">
-                            <div class="card shadow-sm">
-                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveaspectratio="xMidYMid slice" focusable="false">
-                                    <title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
-                                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">
-                                        {{tvShow.title}}
-                                    </text>
-                                </svg>
+                        <div class="container-card col">
+                            <div class="card">
+                                {% if "http" in tvShow.image %}
+                                    <img class="card-img-top" src="{{ tvShow.image }}">
+                                {% else %}
+                                    <img class="card-img-top" src="{{ asset('uploads/' ~ tvShow.image) }}">
+                                {% endif %}
 
                                 <div class="card-body">
                                     <p class="card-text">
