Tests avant livraison en production

--- a/templates/category/list.html.twig
+++ b/templates/category/list.html.twig
@@ -13,7 +13,7 @@
                  <div class="col m-2" style="width: 15rem">
                     <div class="card shadow-sm me-" style="width: 15rem">
                         <a href="">
-                            <img class="bd-placeholder-img card-img-top" width="100%" height="250" xmlns="http://www.w3.org/2000/img" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" src="{{ asset('uploads/' ~ tvShow.image) }}">
+                            <img class="bd-placeholder-img card-img-top" width="100%" height="250" xmlns="http://www.w3.org/2000/img" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" src="{{ asset(tvShow.image) }}">
                             </img>
                         </a>
                         <a href="" class="text-decoration-none">
