--- a/templates/backoffice/tv_show/index.html.twig
+++ b/templates/backoffice/tv_show/index.html.twig
@@ -24,8 +24,14 @@
             <tr>
                 <td>{{ tv_show.id }}</td>
                 <td>{{ tv_show.title }}</td>
-                <td>{{ tv_show.synopsis }}</td>
-                <td>{{ tv_show.image }}</td>
+                <td>{{ tv_show.synopsis | u.truncate(80, '...') }}</td>
+                <td>
+                        {% if "http" in tv_show.image %}
+                            <img src="{{ tv_show.image }}" width="100">
+                        {% else %}
+                            <img src="{{ asset('uploads/' ~ tv_show.image) }}" width="100">
+                        {% endif %}
+                </td>
                 <td>{{ tv_show.nbLikes }}</td>
                 <td>{{ tv_show.publishedAt ? tv_show.publishedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ tv_show.createdAt ? tv_show.createdAt|date('Y-m-d H:i:s') : '' }}</td>
