--- a/templates/backoffice/tv_show/new.html.twig
+++ b/templates/backoffice/tv_show/new.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <h1>Create new TvShow</h1>
 
-    {{ include('backoffice/tvshow/_form.html.twig') }}
+    {{ include('backoffice/tv_show/_form.html.twig') }}
 
-    <a href="{{ path('backoffice_tv_show_index') }}">back to list</a>
+    <a href="{{ path('backoffice_tvshow_index') }}">back to list</a>
 {% endblock %}
